--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion '30.0.3'
+    compileSdk 33
 
     defaultConfig {
         versionName "1.2.1"
