--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/Theme.Echtzeyt"
-        tools:ignore="DataExtractionRules">
+        tools:ignore="DataExtractionRules,RtlEnabled">
         <activity android:name=".EchtzeytActivity"
             android:exported="true">
             <intent-filter>
@@ -26,9 +26,6 @@
             android:exported="false" />
         <activity
             android:name=".MapActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LicensesActivity"
             android:exported="false" />
 
         <receiver
