--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ android {
             useSupportLibrary true
         }
         resValue "string", "_libraryEchtzeytVersion", defaultConfig.versionName
+        buildConfigField "String", "LIBRARY_VERSION_NAME", "\"${defaultConfig.versionName}\""
     }
 
     buildFeatures {
@@ -21,12 +22,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
         coreLibraryDesugaringEnabled = true
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
     namespace "com.maddin.echtzeyt"
 }
@@ -37,7 +38,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.osmdroid:osmdroid-android:6.1.2'
+    implementation 'androidx.startup:startup-runtime:1.1.1'
     implementation project(path: ':transportapi')
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 }
