added pullups; improved search (added first filters, i.e. time selector); adapted to changes in transportapi; improved settings fragments (added custom descriptive switches, seekbars, ...); added lots of settings, moved some settings to echtzeyt configuration; added and implemented icons for vehicle types; fixed some bugs

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/Theme.Echtzeyt"
-        tools:ignore="DataExtractionRules,RtlEnabled">
+        android:hardwareAccelerated="true"
+        android:enableOnBackInvokedCallback="true"
+        tools:ignore="DataExtractionRules,RtlEnabled,UnusedAttribute">
         <activity android:name=".activities.EchtzeytActivity"
             android:exported="true">
             <intent-filter>
