--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 34
 
     defaultConfig {
+        minSdk 14
         versionName "1.3.0"
-        minSdkVersion 14
         multiDexEnabled true
         vectorDrawables {
             useSupportLibrary true
@@ -19,6 +19,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     compileOptions {
@@ -38,7 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.2'
     implementation 'androidx.startup:startup-runtime:1.1.1'
     implementation project(path: ':transportapi')
