--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
-        minSdk 14
-        versionName "1.3.0"
+        minSdk 21
         multiDexEnabled true
         vectorDrawables {
             useSupportLibrary true
         }
-        resValue "string", "_libraryEchtzeytVersion", defaultConfig.versionName
+        resValue "string", "_libraryEchtzeytVersion", "${defaultConfig.versionName}"
         buildConfigField "String", "LIBRARY_VERSION_NAME", "\"${defaultConfig.versionName}\""
     }
 
@@ -35,13 +35,15 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'org.osmdroid:osmdroid-android:6.1.2'
-    implementation 'androidx.startup:startup-runtime:1.1.1'
+    implementation 'org.osmdroid:osmdroid-android:6.1.18'
+    implementation 'androidx.startup:startup-runtime:1.2.0'
+    implementation 'org.maplibre.gl:android-sdk:11.5.2'
     implementation project(path: ':transportapi')
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
 }
