--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,12 @@ android {
     namespace "com.maddin.echtzeyt"
 }
 
+repositories {
+    maven {
+        url 'https://jitpack.io'
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
     implementation 'androidx.core:core-ktx:1.15.0'
@@ -41,9 +47,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'org.osmdroid:osmdroid-android:6.1.18'
+    //implementation 'org.osmdroid:osmdroid-android:6.1.18'
     implementation 'androidx.startup:startup-runtime:1.2.0'
-    implementation 'org.maplibre.gl:android-sdk:11.5.2'
+
+    implementation 'com.github.mapsforge.vtm:vtm:0.22.0'
+    runtimeOnly 'com.github.mapsforge.vtm:vtm-android:0.22.0:natives-armeabi-v7a'
+    runtimeOnly 'com.github.mapsforge.vtm:vtm-android:0.22.0:natives-arm64-v8a'
+    runtimeOnly 'com.github.mapsforge.vtm:vtm-android:0.22.0:natives-x86'
+    runtimeOnly 'com.github.mapsforge.vtm:vtm-android:0.22.0:natives-x86_64'
+    implementation 'com.github.mapsforge.vtm:vtm-android:0.22.0'
+
     implementation project(path: ':transportapi')
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
 }
